[project]
name = "deep-learning-mdsaa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "keras>=3.13.2",
    "tensorflow>=2.20.0",
]

[dependency-groups]
dev = ["ruff>=0.15.1"]

[tool.ruff]
line-length = 80

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "CPY",
  "FIX",
  "COM812",
  "D100",
  "D104",
  "E501",
  'ERA001',
  "S101",
  "TD003",
  "TRY003",
  "T201",
  "F401",
  "W505",
]
unfixable = ["F401"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 80

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
